<resources>
    <string name="app_name">TopacAdemy_android</string>
    <string name="titleCalculator">Калькулятор</string>
    <string name="titleCarList">Список</string>
    <string name="titleWeather">Погода</string>

    <!--  Home Activity  -->
    <string name="title">Login</string>
    <string name="titleEmailEditView">Email</string>
    <string name="titlePasswordEditView">Password</string>
    <string name="titleLoginButton">Log in</string>
    <string name="titleMoreLoginOptions">Or continue with</string>
    <string name="titleGoogleButton">Google</string>
    <string name="titleFacebookButton">Facebook</string>
    <string name="titleRegisterLink">Don`t have account?</string>
    <string name="titleRegisterButton">Create Now</string>

    <!--  Car List Activity  -->
    <string name="titleToolbarCarList">Список автомобилей</string>

    <!--  Car Item Activity  -->
    <string name="titleCarBrand">Бренд</string>
    <string name="titleCarModel">Модель</string>
    <string name="titleButtonCarDetails">Подробнее</string>

    <!--  Car Detail Activity  -->
    <string name="titleCarDetailYear">Год выпуска</string>
    <string name="titleCarDetailDescription">Описание</string>
    <string name="titleCarDetailCost">Стоимость</string>
    <string name="titleCarDetailButtonBuy">Купить</string>

    <!-- Calculator Activity -->
    <string name="titleButtonClear">C</string>
    <string name="titleButtonBackspace">←</string>
    <string name="titleButtonPercent">%</string>
    <string name="titleButtonPlus">+</string>
    <string name="titleButtonMinus">-</string>
    <string name="titleButtonMultiply">*</string>
    <string name="titleButtonDivide">/</string>
    <string name="titleButtonDot">.</string>
    <string name="titleButtonEqual">=</string>

    <string name="titleButtonZero">0</string>
    <string name="titleButtonOne">1</string>
    <string name="titleButtonTwo">2</string>
    <string name="titleButtonThree">3</string>
    <string name="titleButtonFour">4</string>
    <string name="titleButtonFive">5</string>
    <string name="titleButtonSix">6</string>
    <string name="titleButtonSeven">7</string>
    <string name="titleButtonEight">8</string>
    <string name="titleButtonNine">9</string>

    <!-- Weather Card Item -->

    <string name="titleWeatherCartItemDate">2025.05.28</string>
    <string name="titleWeatherCartItemIcon">Weather Icon</string>
    <string name="titleWeatherCartItemTemp">25°C</string>
    <string name="titleWeatherCartItemDescription">Sunny</string>


</resources>