<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        style="@style/Widget.ToolBar"
        android:id="@+id/toolbar"
        app:title="@string/calc"
        app:navigationIcon="@drawable/arrow_left"
        android:layout_width="match_parent"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"/>

    <ImageView
        android:id="@+id/ivCarDetail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_172"
        android:scaleType="centerCrop"
        android:layout_marginBottom="@dimen/margin_8"
        />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCarBrand"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleCarModel"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleCarDetailYear"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleCarDetailDescription"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleCarDetailCost"
            android:textColor="@color/darkGreen"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCarDetailButtonBuy" />
</LinearLayout>