<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivCar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_172"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCarBrand" />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCarModel" />

    <Button
        android:id="@+id/btnDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleButtonCarDetails" />
</LinearLayout>
