<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_16">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleWeatherCartItemDate"
            android:textColor="@color/textLink"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="@dimen/image_size_48"
            android:layout_height="@dimen/image_size_48"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:contentDescription="@string/titleWeatherCartItemIcon" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleWeatherCartItemTemp"
            android:textColor="@color/textLinkBold"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleWeatherCartItemDescription"
            android:textColor="@color/textLink"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

