<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:padding="@dimen/padding_32">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_marginTop="@dimen/margin_136"
        android:layout_marginBottom="@dimen/margin_48"
        android:text="@string/title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_36" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleEmailEditView">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titlePasswordEditView">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/titleLoginButton"
        android:textSize="@dimen/text_size_18"
        android:textAllCaps="false"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_18"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="@string/titleMoreLoginOptions"
        android:textAlignment="center"
        android:textColor="@color/textLink"
        android:textSize="@dimen/text_size_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.ButtonLink"
            android:id="@+id/btnLinkGoogle"
            android:layout_width="@dimen/width_148"
            android:layout_height="@dimen/height_56"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/titleGoogleButton"
            android:textAllCaps="false"
            app:icon="@drawable/google_logo"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconSize="@dimen/image_size_24"
            app:iconTintMode="screen"
            app:iconTint="@android:color/transparent"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.ButtonLink"
            android:id="@+id/btnLinkFacebook"
            android:layout_width="@dimen/width_148"
            android:layout_height="@dimen/height_56"
            android:layout_marginStart="@dimen/margin_16"
            android:text="@string/titleFacebookButton"
            android:textAllCaps="false"
            app:icon="@drawable/facebook_logo"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconSize="@dimen/image_size_24"
            app:iconTintMode="screen"
            app:iconTint="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/width_24"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_32"
        android:text="@string/titleRegisterLink"
        android:textColor="@color/textLink"
        android:textSize="@dimen/text_size_16" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/goToRegister"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_24"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_32"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/titleRegisterButton"

            android:textColor="@color/onBackground"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</LinearLayout>
